# MLOps_SD_Kopie

./: Makefile  README.md  cloudbuild.yaml  config_gpu.yaml  environment.yml  pyproject.toml  requirements.txt  requirements_tests.txt  vertex_ai_train.yaml
.devcontainer/: Dockerfile
.dvc/: config
.github/workflows/: codecheck.yaml  pre_commit.yaml  tests.yaml
data/processed/: dataset_info.json  state.json
data/raw/: train.dvc
data/raw/train/: metadata.jsonl
dockerfiles/: predict_model.dockerfile  train_model.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
mlops_project_2024/: __init__.py  predict_model.py  train_model.py
mlops_project_2024/config/: default_config.yaml  default_config_all.yaml  example_config.yaml
mlops_project_2024/data/: make_dataset.py
mlops_project_2024/models/: model.py
models/: pytorch_lora_weights.safetensors
notebooks/: inference_dev.ipynb
reports/: README.md  report.html
tests/: test_api.py  test_data.py  test_model.py
