[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mlops_project_2024"
version = "0.0.1"
description = "\" \""
authors = [
  { name = "Luyang Chu, Jan Buessing, Setareh Toodeh Fadavi, Thi Thuy Pham", email = "your@email.com" },
]

readme = "README.md"
requires-python = ">=3.11,<3.12"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["mlops_project_2024"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120
